Gets data directly from Quinyx instead of doing it manually

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 @layer utilities {
-  .striped tr:nth-child(even) {
-    /* @apply bg-gray-100; */
+  .font_Mulish {
+    @apply font-Mulish !important;
   }
 }
