Upgraded to NextJS 13 and added react-day-picker instead of Mui DatePicker

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import "react-day-picker/dist/style.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
